--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         * {
             box-sizing: border-box;
         }
-
         body {
             margin: 0;
             padding: 0;
@@ -25,7 +24,6 @@
             height: 100vh;
             color: #333;
         }
-
         .container {
             background: #ffffff;
             padding: 50px 40px;
@@ -35,18 +33,15 @@
             max-width: 500px;
             text-align: center;
         }
-
         .container h1 {
             margin-bottom: 30px;
             font-size: 2.2rem;
             color: #16a34a;
         }
-
         .form-group {
             position: relative;
             margin-bottom: 25px;
         }
-
         .form-group i {
             position: absolute;
             top: 50%;
@@ -55,7 +50,6 @@
             color: #22c55e;
             font-size: 1.1rem;
         }
-
         .form-group input {
             width: 100%;
             padding: 14px 20px 14px 50px;
@@ -64,12 +58,10 @@
             font-size: 1.1rem;
             transition: border-color 0.3s;
         }
-
         .form-group input:focus {
             border-color: #22c55e;
             outline: none;
         }
-
         button {
             width: 100%;
             padding: 14px;
@@ -82,69 +74,56 @@
             cursor: pointer;
             transition: background 0.3s, transform 0.2s;
         }
-
         button:hover {
             background: #16a34a;
             transform: translateY(-2px);
         }
-
         button:active {
             transform: translateY(0);
         }
-
         .redirect {
             margin-top: 25px;
             font-size: 1rem;
             color: #555;
         }
-
         .redirect a {
             color: #22c55e;
             text-decoration: none;
             font-weight: 500;
         }
-
         .redirect a:hover {
             text-decoration: underline;
         }
-
         .error {
             color: #e11d48;
             font-size: 0.95rem;
             margin-top: 10px;
         }
-
         .success {
             color: #16a34a;
             font-size: 1rem;
             margin-top: 20px;
         }
-
         @media (max-width: 600px) {
             .container {
                 padding: 40px 30px;
                 max-width: 90%;
             }
-
             .container h1 {
                 font-size: 2rem;
             }
-
             .form-group input {
                 padding: 12px 18px 12px 45px;
                 font-size: 1rem;
             }
-
             .form-group i {
                 left: 15px;
                 font-size: 1rem;
             }
-
             button {
                 padding: 12px;
                 font-size: 1rem;
             }
-
             .redirect {
                 font-size: 0.95rem;
             }
@@ -169,7 +148,8 @@
             </div>
             <button type="submit">Registrar</button>
         </form>
-       
+        <div class="redirect">
+            
         </div>
         <div id="error-message" class="error" role="alert" aria-live="assertive"></div>
         <div id="success-message" class="success" role="alert" aria-live="assertive"></div>
@@ -191,6 +171,7 @@
             const email = emailInput.value.trim();
             const password = passwordInput.value.trim();
 
+            // Limpar mensagens anteriores
             errorMessage.textContent = '';
             successMessage.textContent = '';
 
@@ -217,7 +198,8 @@
                 if (response.ok) {
                     successMessage.innerHTML = 'Conta criada com sucesso!<br>Faça o Login pelo site: superproclube.com.br';
                 } else {
-                    errorMessage.textContent = data.error || 'Erro ao criar a conta. Por favor, tente novamente.';
+                    // Exibe a mensagem fixa de erro, conforme solicitado
+                    errorMessage.textContent = 'o e-mail ja esta em uso';
                 }
             } catch (error) {
                 errorMessage.textContent = 'Erro ao tentar registrar. Por favor, tente novamente.';
