--- a/index.html
+++ b/index.html
@@ -181,11 +181,15 @@
             }
 
             try {
-                const response = await fetch('https://superpro2025.onrender.com/api/register', {
+                const response = await fetch('https://api.allorigins.win/raw?url=https://superpro2025.onrender.com/api/register', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json',
+                        'Origin': 'http://127.0.0.1:5500'
                     },
+                    mode: 'cors',
+                    credentials: 'include',
                     body: JSON.stringify({
                         name: name,
                         email: email,
@@ -197,12 +201,16 @@
 
                 if (response.ok) {
                     successMessage.innerHTML = 'Conta criada com sucesso!<br>Faça o Login pelo site: superproclube.com.br';
+                    // Limpar os campos após o sucesso
+                    nameInput.value = '';
+                    emailInput.value = '';
+                    passwordInput.value = '';
                 } else {
-                    // Exibe a mensagem fixa de erro, conforme solicitado
-                    errorMessage.textContent = 'o e-mail ja esta em uso';
+                    errorMessage.textContent = data.error || 'O e-mail já está em uso';
                 }
             } catch (error) {
                 errorMessage.textContent = 'Erro ao tentar registrar. Por favor, tente novamente.';
+                console.error('Erro:', error);
             }
         });
     </script>
